# burdenR

./: README.md
example/: groups.list  polu_27_GATK_vcftoolsfilter.recode.anno.vcf.gz.tbi  run_burden_relatetive_risk.sh
src/burdenr/: pyproject.toml
